# cocktail-recipes

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
docs/: data-model-planning.md
infra/: .gitignore  cloudrun.tf  database.tf  main.tf  outputs.tf  secrets.tf  storage.tf  terraform.tfvars.example  variables.tf  versions.tf
src/cocktails/: asgi.py  settings.py  settings_prod.py  urls.py  wsgi.py
src/ingredients/: admin.py  models.py
src/ingredients/migrations/: 0001_initial.py  0002_ingredient_needs_categorization.py  0003_add_ingredient_category_suggestion.py
src/ingredients/services/: __init__.py  categorizer.py
src/ingredients/templates/admin/ingredients/ingredient/: add_similar.html  change_list.html  manage_inventory.html
src/ingredients/templates/admin/ingredients/ingredient/partials/: similar_search_results.html
src/inventory/: admin.py  models.py  services.py  tests.py  views.py
src/inventory/migrations/: 0001_initial.py
src/recipes/: admin.py  measurements.py  models.py  urls.py  views.py
src/recipes/management/commands/: fix_category_hierarchy.py  import_deathco_csv.py
src/recipes/migrations/: 0001_initial.py  0002_alter_recipeingredient_amount_and_more.py  0003_recipeimport.py  0004_add_raw_ocr_text.py  0005_enable_pg_trgm.py
src/recipes/services/: __init__.py  image_parser.py  import_processor.py
src/recipes/templates/admin/recipes/recipe/: available_recipes.html  change_list.html
src/recipes/templates/admin/recipes/recipeimport/: change_list.html  upload.html
src/recipes/templates/recipes/: available.html  base.html  recipe_detail.html  recipe_list.html
src/recipes/templates/recipes/partials/: available_results.html  recipe_results.html
tests/: conftest.py  test_ingredients.py  test_inventory_services.py  test_measurements.py  test_setup.py
